Updated the get transients for role API to now return mre details transient information for related role functions and child roles.
