# src/za.co.grindrodbank.a3s/A3SApiResources/FunctionSimple.cs
@@ -1,0 +1,153 @@
+/**
+ * *************************************************
+ * Copyright (c) 2020, Grindrod Bank Limited
+ * License MIT: https://opensource.org/licenses/MIT
+ * **************************************************
+ */
+/*
+ * A3S
+ *
+ * API Definition for A3S. This service allows authentication, authorisation and accounting.
+ *
+ * The version of the OpenAPI document: 1.1.4
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Linq;
+using System.Text;
+using System.Collections.Generic;
+using System.ComponentModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using za.co.grindrodbank.a3s.Converters;
+
+namespace za.co.grindrodbank.a3s.A3SApiResources
+{ 
+    /// <summary>
+    /// A model of a funtion, but without any of the function&#39;s relations. 
+    /// </summary>
+    [DataContract]
+    public partial class FunctionSimple : IEquatable<FunctionSimple>
+    { 
+        /// <summary>
+        /// Gets or Sets Uuid
+        /// </summary>
+        [DataMember(Name="uuid", EmitDefaultValue=false)]
+        public Guid Uuid { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Name
+        /// </summary>
+        [DataMember(Name="name", EmitDefaultValue=false)]
+        public string Name { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Description
+        /// </summary>
+        [DataMember(Name="description", EmitDefaultValue=false)]
+        public string Description { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class FunctionSimple {\n");
+            sb.Append("  Uuid: ").Append(Uuid).Append("\n");
+            sb.Append("  Name: ").Append(Name).Append("\n");
+            sb.Append("  Description: ").Append(Description).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (obj is null) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((FunctionSimple)obj);
+        }
+
+        /// <summary>
+        /// Returns true if FunctionSimple instances are equal
+        /// </summary>
+        /// <param name="other">Instance of FunctionSimple to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(FunctionSimple other)
+        {
+            if (other is null) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    Uuid == other.Uuid ||
+                    Uuid != null &&
+                    Uuid.Equals(other.Uuid)
+                ) && 
+                (
+                    Name == other.Name ||
+                    Name != null &&
+                    Name.Equals(other.Name)
+                ) && 
+                (
+                    Description == other.Description ||
+                    Description != null &&
+                    Description.Equals(other.Description)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    if (Uuid != null)
+                    hashCode = hashCode * 59 + Uuid.GetHashCode();
+                    if (Name != null)
+                    hashCode = hashCode * 59 + Name.GetHashCode();
+                    if (Description != null)
+                    hashCode = hashCode * 59 + Description.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(FunctionSimple left, FunctionSimple right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(FunctionSimple left, FunctionSimple right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
